--- a/app/src/main/res/layout/todo_row.xml
+++ b/app/src/main/res/layout/todo_row.xml
@@ -6,6 +6,10 @@
         <variable
             name="model"
             type="com.commonsware.todo.ToDoModel" />
+
+        <variable
+            name="holder"
+            type="com.commonsware.todo.RosterRowHolder" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,10 +26,11 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:checked="@{model.completed}"
             android:ellipsize="end"
             android:maxLines="3"
+            android:onCheckedChanged="@{(cb, isChecked) -> holder.onRowClick.invoke(model)}"
             android:text="@{model.description}"
-            android:checked="@{model.completed}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
