--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph.xml"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/nav_graph.xml"
     app:startDestination="@id/rosterListFragment">
 
     <fragment
         android:id="@+id/rosterListFragment"
         android:name="com.commonsware.todo.RosterListFragment"
-        android:label="RosterListFragment" />
+        android:label="@string/app_name">
+        <action
+            android:id="@+id/displayModel"
+            app:destination="@id/displayFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/displayFragment"
+        android:name="com.commonsware.todo.DisplayFragment"
+        android:label="@string/app_name" >
+        <argument
+            android:name="modelId"
+            app:argType="string" />
+    </fragment>
 </navigation>
