--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,11 +11,20 @@
         <action
             android:id="@+id/displayModel"
             app:destination="@id/displayFragment" />
+        <action
+            android:id="@+id/createModel"
+            app:destination="@id/editFragment">
+            <argument
+                android:name="modelId"
+                android:defaultValue="@null"
+                app:argType="string"
+                app:nullable="true"/>
+        </action>
     </fragment>
     <fragment
         android:id="@+id/displayFragment"
         android:name="com.commonsware.todo.DisplayFragment"
-        android:label="@string/app_name" >
+        android:label="@string/app_name">
         <argument
             android:name="modelId"
             app:argType="string" />
@@ -26,9 +35,10 @@
     <fragment
         android:id="@+id/editFragment"
         android:name="com.commonsware.todo.EditFragment"
-        android:label="@string/app_name" >
+        android:label="@string/app_name">
         <argument
             android:name="modelId"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 </navigation>
