--- a/app/src/main/res/layout/todo_edit.xml
+++ b/app/src/main/res/layout/todo_edit.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="model"
-            type="com.commonsware.todo.ToDoModel" />
+            type="com.commonsware.todo.repo.ToDoModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
