--- a/app/src/main/res/layout/todo_roster.xml
+++ b/app/src/main/res/layout/todo_roster.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
+  <ProgressBar
+      android:id="@+id/loading"
+      style="?android:attr/progressBarStyle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
+      app:layout_constraintBottom_toBottomOf="@+id/items"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
   <TextView
       android:id="@+id/empty"
       android:layout_width="wrap_content"
@@ -15,7 +29,8 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent"
+      tools:visibility="gone" />
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/items"
