--- a/app/src/main/res/layout/todo_roster.xml
+++ b/app/src/main/res/layout/todo_roster.xml
@@ -24,6 +24,8 @@
       android:id="@+id/empty"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:gravity="center"
+      android:padding="@dimen/empty_padding"
       android:text="@string/msg_empty"
       android:textAppearance="?android:attr/textAppearanceMedium"
       app:layout_constraintBottom_toBottomOf="parent"
