--- a/app/src/main/res/menu/actions.xml
+++ b/app/src/main/res/menu/actions.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/about"
         android:icon="@drawable/ic_info_outline_black_24dp"
+        android:orderInCategory="100"
         android:title="@string/menu_about"
         app:showAsAction="never" />
 </menu>
