--- a/app/src/main/res/menu/actions_roster.xml
+++ b/app/src/main/res/menu/actions_roster.xml
@@ -30,4 +30,9 @@
         android:icon="@drawable/ic_add_black_24dp"
         android:title="@string/menu_add"
         app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/save"
+        android:icon="@drawable/ic_save_black_24dp"
+        android:title="@string/menu_save"
+        app:showAsAction="ifRoom|withText" />
 </menu>
