--- a/app/src/main/res/menu/actions_roster.xml
+++ b/app/src/main/res/menu/actions_roster.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/share"
+        android:icon="@drawable/ic_share_black_24dp"
+        android:title="@string/menu_share"
+        app:showAsAction="ifRoom|withText" />
+    <item
         android:id="@+id/filter"
         android:icon="@drawable/ic_filter_list_black_24dp"
         android:title="@string/menu_filter"
