--- a/app/src/main/res/menu/actions.xml
+++ b/app/src/main/res/menu/actions.xml
@@ -3,6 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/settings"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:orderInCategory="90"
+        android:title="@string/settings"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/about"
         android:icon="@drawable/ic_info_outline_black_24dp"
         android:orderInCategory="100"
