--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,8 +42,8 @@
             app:nullable="true" />
     </fragment>
     <fragment
-        android:id="@+id/editPrefs"
+        android:id="@+id/prefsFragment"
         android:name="com.commonsware.todo.ui.prefs.PrefsFragment"
         android:label="PrefsFragment" />
-    <action android:id="@+id/action_global_prefsFragment" app:destination="@id/editPrefs" />
+    <action android:id="@+id/editPrefs" app:destination="@id/prefsFragment" />
 </navigation>
